little changes to fix spacing

--- a/styles.css
+++ b/styles.css
@@ -128,12 +128,12 @@
           }
   body {
     font-size:18px;
-    margin-left: 200px;
-    margin-right:200px;
+    margin-left: 300px;
+    margin-right:300px;
   }
   .span-width {
-  margin-left: -215px;
-  margin-right: -215px;
+  margin-left: -315px;
+  margin-right: -315px;
   }
 
 }
